--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Restaurante Delicioso</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
@@ -16,25 +16,22 @@
         <div class="login-form" id="loginForm">
           <h3>Iniciar Sesión</h3>
           <label for="loginEmail">Correo electrónico</label>
-          <input type="email" id="loginEmail" placeholder="Correo" required>
+          <input type="email" id="loginEmail" placeholder="Correo" required />
           <label for="loginPassword">Contraseña</label>
-          <input type="password" id="loginPassword" placeholder="Contraseña" required>
+          <input type="password" id="loginPassword" placeholder="Contraseña" required />
           <button onclick="loginUsuario()">Entrar</button>
           <p class="register-link">
             ¿No tienes cuenta? <a href="register.html" target="_blank">Regístrate aquí</a>
           </p>
         </div>
       </div>
-
       <div class="cart" onclick="location.href='cart.html';">
         <span>🛒</span>
         <span class="cart-count">0</span>
       </div>
-
       <div class="logout" id="logoutButton" style="display: none;">
         <button onclick="logout()">Cerrar sesión</button>
       </div>
-
       <div id="historialButton" style="display: none;">
         <button onclick="location.href='historial.html'">Historial</button>
       </div>
@@ -44,7 +41,7 @@
   <main>
     <h1>Menú</h1>
     <div id="menu-container" class="menu">
-      <!-- Productos se cargarán dinámicamente desde la API -->
+      <!-- Los productos se cargarán dinámicamente aquí -->
     </div>
   </main>
 
