cambios en cart.html, restaurante.js y historial.js

--- a/cart.html
+++ b/cart.html
@@ -43,7 +43,7 @@
   <header>
     <div class="logo">Fast Food Restaurant</div>
   </header>
-
+<button onclick="location.href='index.html'" style="margin-top: 15px;">Volver al menú</button>
   <main>
     <h1>Carrito de Compras</h1>
     <div id="mensaje-carrito"></div>
