--- a/historial.html
+++ b/historial.html
@@ -8,34 +8,52 @@
   <style>
     main {
       padding: 20px;
-      max-width: 900px;
+      max-width: 1000px;
       margin: auto;
     }
     h1 {
       text-align: center;
+      margin-bottom: 20px;
     }
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 20px;
+      margin-bottom: 30px;
     }
     th, td {
-      border: 1px solid #ddd;
+      border: 1px solid #ccc;
       padding: 8px;
       text-align: center;
     }
     th {
-      background-color: #f2f2f2;
+      background-color: #f5f5f5;
+    }
+    td[colspan="5"] {
+      text-align: right;
+      background-color: #f9f9f9;
+      font-weight: bold;
+    }
+    .cabecera-compra {
+      background-color: #e0f0ff;
+      font-weight: bold;
+      text-align: left;
     }
     #mensaje {
       text-align: center;
-      margin-top: 30px;
       font-size: 18px;
       color: #777;
+      margin: 20px 0;
+    }
+    button {
+      display: block;
+      margin: 20px auto;
+      padding: 10px 20px;
+      font-size: 16px;
     }
   </style>
 </head>
 <body>
+
   <header>
     <div class="logo">Fast Food Restaurant</div>
   </header>
@@ -43,10 +61,11 @@
   <main>
     <h1>Historial de Compras</h1>
     <div id="mensaje"></div>
-    <table id="tablaHistorial" style="display:none;">
+
+    <table id="tablaHistorial" style="display: none;">
       <thead>
         <tr>
-          <th>Fecha</th>
+          <th>Fecha / Compra</th>
           <th>Producto</th>
           <th>Cantidad</th>
           <th>Precio Unitario</th>
@@ -55,7 +74,8 @@
       </thead>
       <tbody></tbody>
     </table>
-    <button onclick="location.href='index.html'" style="margin-top: 20px;">Volver al menú</button>
+
+    <button onclick="location.href='index.html'">Volver al Menú</button>
   </main>
 
   <script src="js/historial.js"></script>
