--- a/cart.html
+++ b/cart.html
@@ -43,7 +43,7 @@
   <header>
     <div class="logo">Fast Food Restaurant</div>
   </header>
-<button onclick="location.href='index.html'" style="margin-top: 15px;">Volver al menú</button>
+
   <main>
     <h1>Carrito de Compras</h1>
     <div id="mensaje-carrito"></div>
@@ -61,6 +61,8 @@
     </table>
     <div id="total">Total: $0</div>
     <button id="confirm-btn" style="display: none;">Confirmar Compra</button>
+    <br><br>
+    <button onclick="location.href='index.html'">Volver al Menú</button>
   </main>
 
   <script src="js/cart.js"></script>
